--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.2.3",
-    "@faker-js/faker": "^7.3.0",
-    "colors": "1.4.0",
-    "esbuild": "^0.17.3",
+    "@faker-js/faker": "^7.6.0",
+    "colors": "^1.4.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "puppeteer": "^13.4.1",
-    "puppeteer-extra": "^3.2.3",
-    "puppeteer-extra-plugin-stealth": "^2.9.0",
-    "user-agents": "^1.0.1082"
+    "puppeteer": "^19.6.3",
+    "puppeteer-core": "^19.6.3",
+    "puppeteer-extra": "^3.3.4",
+    "puppeteer-extra-plugin-stealth": "^2.11.1"
   }
 }
