--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.2.3",
     "@faker-js/faker": "^7.6.0",
+    "axios": "^1.2.3",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
+    "detect-port": "^1.5.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "puppeteer": "^19.6.3",
